log
vi., 10 de mar. de 2023  8:52:30: 
 tests:  0|7
total_score: 0/70
93b9ab2
Fri 10 Mar 2023 09:38:47 PM UTC: 
 tests:  0|7
total_score: 0/70
3f6be67
Fri 10 Mar 2023 10:24:46 PM UTC: 
 tests:  0|7
total_score: 0/70
c9b73da
Fri 10 Mar 2023 10:31:20 PM UTC: 
 exercises.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘swap’:
exercises.c:16:12: error: initialization of ‘int’ from ‘int *’ makes integer from pointer without a cast [-Werror=int-conversion]
   16 | int acopia=a , bcopia=b;
      |            ^
exercises.c:16:23: error: initialization of ‘int’ from ‘int *’ makes integer from pointer without a cast [-Werror=int-conversion]
   16 | int acopia=a , bcopia=b;
      |                       ^
exercises.c:17:4: error: comparison between pointer and integer [-Werror]
   17 |   a==bcopia;
      |    ^~
exercises.c:17:4: error: statement with no effect [-Werror=unused-value]
   17 |   a==bcopia;
      |   ~^~~~~~~~
exercises.c:18:4: error: comparison between pointer and integer [-Werror]
   18 |   b==acopia;
      |    ^~
exercises.c:18:4: error: statement with no effect [-Werror=unused-value]
   18 |   b==acopia;
      |   ~^~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
0c97171
Fri 10 Mar 2023 10:31:58 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘swap’:
exercises.c:17:4: error: comparison between pointer and integer [-Werror]
   17 |   a==bcopia;
      |    ^~
exercises.c:17:4: error: statement with no effect [-Werror=unused-value]
   17 |   a==bcopia;
      |   ~^~~~~~~~
exercises.c:18:4: error: comparison between pointer and integer [-Werror]
   18 |   b==acopia;
      |    ^~
exercises.c:18:4: error: statement with no effect [-Werror=unused-value]
   18 |   b==acopia;
      |   ~^~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
7ed8d60
Fri 10 Mar 2023 10:32:16 PM UTC: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:5:
exercises.c: In function ‘swap’:
exercises.c:17:5: error: statement with no effect [-Werror=unused-value]
   17 |   *a==bcopia;
      |   ~~^~~~~~~~
exercises.c:18:5: error: statement with no effect [-Werror=unused-value]
   18 |   *b==acopia;
      |   ~~^~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
5b115e0
Fri 10 Mar 2023 10:32:33 PM UTC: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  1|6
total_score: 10/70
3f11793
Sun 12 Mar 2023 05:54:31 PM UTC: 
 exercises.c | 16 ++++++++++++++--
 1 file changed, 14 insertions(+), 2 deletions(-)
 tests:  1|6
total_score: 10/70
8ca6bdd
Thu 16 Mar 2023 07:18:31 PM UTC: 
 tests:  1|6
total_score: 10/70
c3b5d65
Thu 16 Mar 2023 07:19:59 PM UTC: 
 exercises.c | 15 +++++++--------
 1 file changed, 7 insertions(+), 8 deletions(-)
 tests:  2|5
total_score: 20/70
0c14fd3
Fri 17 Mar 2023 03:55:23 AM UTC: 
 exercises.c | 19 +++++++++++++++----
 1 file changed, 15 insertions(+), 4 deletions(-)
In file included from test.c:5:
exercises.c: In function ‘crearPersona’:
exercises.c:59:6: error: suggest parentheses around assignment used as truth value [-Werror=parentheses]
   59 |   if(p=NULL)
      |      ^
exercises.c: In function ‘crearVector’:
exercises.c:85:19: error: ‘vector’ undeclared (first use in this function); did you mean ‘Vector’?
   85 |   Vector * local=(vector *) malloc(sizeof(vector) * n);
      |                   ^~~~~~
      |                   Vector
exercises.c:85:19: note: each undeclared identifier is reported only once for each function it appears in
exercises.c:85:27: error: expected expression before ‘)’ token
   85 |   Vector * local=(vector *) malloc(sizeof(vector) * n);
      |                           ^
exercises.c:86:6: error: suggest parentheses around assignment used as truth value [-Werror=parentheses]
   86 |   if(local=NULL)
      |      ^~~~~
exercises.c: In function ‘asignarValor’:
exercises.c:99:20: error: expected ‘;’ before ‘}’ token
   99 |   v->datos[i]=valor
      |                    ^
      |                    ;
  100 | }
      | ~                   
exercises.c: In function ‘obtenerValor’:
exercises.c:108:14: error: ‘Vector’ has no member named ‘dato’; did you mean ‘datos’?
  108 |    return v->dato[i];
      |              ^~~~
      |              datos
exercises.c: In function ‘sumaV’:
exercises.c:118:1: error: expected identifier before ‘}’ token
  118 | }
      | ^
exercises.c: In function ‘obtenerValor’:
exercises.c:109:1: error: control reaches end of non-void function [-Werror=return-type]
  109 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
e6e584b
Fri 17 Mar 2023 03:56:17 AM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from /nix/store/4pqv2mwdn88h7xvsm7a5zplrd8sxzvw0-glibc-2.35-163-dev/include/time.h:29,
                 from test.c:4:
exercises.c: In function ‘crearPersona’:
exercises.c:59:9: error: incompatible types when assigning to type ‘Persona’ from type ‘void *’
   59 |   if(*p=NULL)
      |         ^~~~
In file included from test.c:5:
exercises.c: In function ‘crearVector’:
exercises.c:85:19: error: ‘vector’ undeclared (first use in this function); did you mean ‘Vector’?
   85 |   Vector * local=(vector *) malloc(sizeof(vector) * n);
      |                   ^~~~~~
      |                   Vector
exercises.c:85:19: note: each undeclared identifier is reported only once for each function it appears in
exercises.c:85:27: error: expected expression before ‘)’ token
   85 |   Vector * local=(vector *) malloc(sizeof(vector) * n);
      |                           ^
exercises.c:86:6: error: suggest parentheses around assignment used as truth value [-Werror=parentheses]
   86 |   if(local=NULL)
      |      ^~~~~
exercises.c: In function ‘asignarValor’:
exercises.c:99:20: error: expected ‘;’ before ‘}’ token
   99 |   v->datos[i]=valor
      |                    ^
      |                    ;
  100 | }
      | ~                   
exercises.c: In function ‘obtenerValor’:
exercises.c:108:14: error: ‘Vector’ has no member named ‘dato’; did you mean ‘datos’?
  108 |    return v->dato[i];
      |              ^~~~
      |              datos
exercises.c: In function ‘sumaV’:
exercises.c:118:1: error: expected identifier before ‘}’ token
  118 | }
      | ^
exercises.c: In function ‘obtenerValor’:
exercises.c:109:1: error: control reaches end of non-void function [-Werror=return-type]
  109 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
c4979d5
Fri 17 Mar 2023 03:56:27 AM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘crearPersona’:
exercises.c:59:6: error: suggest parentheses around assignment used as truth value [-Werror=parentheses]
   59 |   if(p=NULL)
      |      ^
exercises.c: In function ‘crearVector’:
exercises.c:85:19: error: ‘vector’ undeclared (first use in this function); did you mean ‘Vector’?
   85 |   Vector * local=(vector *) malloc(sizeof(vector) * n);
      |                   ^~~~~~
      |                   Vector
exercises.c:85:19: note: each undeclared identifier is reported only once for each function it appears in
exercises.c:85:27: error: expected expression before ‘)’ token
   85 |   Vector * local=(vector *) malloc(sizeof(vector) * n);
      |                           ^
exercises.c:86:6: error: suggest parentheses around assignment used as truth value [-Werror=parentheses]
   86 |   if(local=NULL)
      |      ^~~~~
exercises.c: In function ‘asignarValor’:
exercises.c:99:20: error: expected ‘;’ before ‘}’ token
   99 |   v->datos[i]=valor
      |                    ^
      |                    ;
  100 | }
      | ~                   
exercises.c: In function ‘obtenerValor’:
exercises.c:108:14: error: ‘Vector’ has no member named ‘dato’; did you mean ‘datos’?
  108 |    return v->dato[i];
      |              ^~~~
      |              datos
exercises.c: In function ‘sumaV’:
exercises.c:118:1: error: expected identifier before ‘}’ token
  118 | }
      | ^
exercises.c: In function ‘obtenerValor’:
exercises.c:109:1: error: control reaches end of non-void function [-Werror=return-type]
  109 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
05c9f2e
Fri 17 Mar 2023 03:56:58 AM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘crearPersona’:
exercises.c:59:6: error: suggest parentheses around assignment used as truth value [-Werror=parentheses]
   59 |   if(p=NULL)
      |      ^
exercises.c: In function ‘crearVector’:
exercises.c:86:6: error: suggest parentheses around assignment used as truth value [-Werror=parentheses]
   86 |   if(local=NULL)
      |      ^~~~~
exercises.c: In function ‘asignarValor’:
exercises.c:99:20: error: expected ‘;’ before ‘}’ token
   99 |   v->datos[i]=valor
      |                    ^
      |                    ;
  100 | }
      | ~                   
exercises.c: In function ‘obtenerValor’:
exercises.c:108:14: error: ‘Vector’ has no member named ‘dato’; did you mean ‘datos’?
  108 |    return v->dato[i];
      |              ^~~~
      |              datos
exercises.c: In function ‘sumaV’:
exercises.c:118:1: error: expected identifier before ‘}’ token
  118 | }
      | ^
exercises.c: In function ‘obtenerValor’:
exercises.c:109:1: error: control reaches end of non-void function [-Werror=return-type]
  109 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
51c78d4
